Fixed the alignment of the slogan text to line up with the logo text.

--- a/main/webapp/modules/core/styles/index.css
+++ b/main/webapp/modules/core/styles/index.css
@@ -41,6 +41,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #slogan {
   margin-left: 1em;
+  margin-top: .5em;
   font-style: italic;
   font-size: 110%;
   color: var(--text-quarternary);
